--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -9,8 +9,12 @@ body {
     background-color: #f4f4f4;
 }
 .container {
-    width: 80%;
+    width: auto;
     margin: 20px auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
 }
 h1 {
     text-align: center;
@@ -19,8 +23,8 @@ h1 {
     background-color: #fff;
     border-radius: 5px;
     padding: 20px;
-    margin-bottom: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
 }
 .cliente p {
     margin: 5px 0;
